--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_bGlnaHQtZHVjay01MS5jbGVyay5hY2NvdW50cy5kZXYk"
+CLERK_SECRET_KEY="sk_test_YBu1mVXmBnBiEud2PR3XWPW8qs1ocnUpgKckh9jleE"
 
 CLERK_WEBHOOK_SECRET=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
